--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.21.0",
-    "graphql": "^15.5.0"
+    "bcrypt": "^5.0.0",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
