--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
+    "graphql-scalars": "^1.7.1",
     "jsonwebtoken": "^8.5.1",
     "sqlite3": "^5.0.2"
   }
